# rental_legal_agent

./: Makefile  README.md  pyproject.toml
agents/: __init__.py  drafter.py  intake.py  law_retriever.py  orchestrator.py  qa.py  reasoner.py  registry.py  scheduler.py
api/: main.py
api/models/: __init__.py  schemas.py
api/routes/: cases.py
api/services/: case_store.py
core/: settings.py
fastapi/: __init__.py  app.py  exceptions.py  responses.py  testclient.py
knowledge/: __init__.py  sources.py
llm/: __init__.py  client.py
pydantic/: __init__.py
rag_indexer/: tasks.py
scheduler/: service.py
static/: app.js
templates/: index.html
tests/: conftest.py  test_api.py
